# production-assistant

./: .env.example  .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/auth/: Avatar.svelte  login.ts
src/lib/components/: ProjectButton.svelte  ProjectMarkdownEditor.svelte
src/lib/constants/: project.ts
src/lib/db/: local_db.ts
src/lib/debug/: yotuube.ts
src/lib/icons/: style.css
src/lib/state/: Auth.svelte.ts  Project.svelte.ts
src/lib/types/: ffprobe.ts
src/lib/utils/: date.ts  project.ts  text.ts  youtube.ts
src/lib/utils/ai/: titles.ts
src/lib/utils/github/: api.ts  constants.ts  types.ts
src/lib/utils/markdown/: index.ts  plugins.ts  validate.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  style.css
src/routes/login/: +page.svelte
src/routes/project/: +layout.svelte  +layout.ts
src/routes/project/[id]/: +layout.svelte  +layout.ts  +page.svelte
src/routes/project/[id]/creative/: +page.svelte
src/routes/project/[id]/notes/: +page.svelte
src/routes/project/[id]/publish/: +page.svelte
