[package]
name = "syntax-production-assistant"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "syntax_production_assistant_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ffmpeg-sidecar = "1.1.0"
chrono = "0.4.37"
colored = "2.1.0"
regex = "1.5"
tauri-plugin-http = "2.0.0-rc.0"
tauri-plugin-decorum = "1.0.0"
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-devtools = "2.0.0-rc"
tauri-plugin-log = "2.0.0-rc.1"
log = "0.4"
which = "6.0.3"
